--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "antd": "^4.21.7",
     "axios": "^0.27.2",
     "craco-less": "^2.0.0",
+    "node-sass": "^7.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
@@ -17,6 +18,8 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
+    "sass": "^1.53.0",
+    "sass-loader": "^13.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
