--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "antd": "^4.21.7",
     "axios": "^0.27.2",
     "craco-less": "^2.0.0",
+    "http-proxy-middleware": "^2.0.6",
     "node-sass": "^7.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
