--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@craco/craco": "^6.4.5",
     "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/jest-dom": "^5.16.4",
@@ -10,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.21.7",
     "axios": "^0.27.2",
+    "babel-plugin-add-module-exports": "^1.0.4",
     "craco-less": "^2.0.0",
     "http-proxy-middleware": "^2.0.6",
     "node-sass": "^7.0.1",
